Workaround for nexus-staging-maven-plugin and Java 17